# wqxlib-python

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  test_new_paradigm.ipynb  version.py
.devcontainer/: devcontainer.json
.github/workflows/: pypi-publish.yml
examples/: continuous.py  create_monitoring_location.ipynb  data_report_03-04-2021_13-22-37.csv  monitoring_location.py
tests/: test_create_wqx_document.py
wqxlib/: Document.py  Header.py  ImportConfiguration.py  Payload.py  Submission.py  WQXActivity.py  WQXAttachedBinaryObject.py  WQXElectronicAddress.py  WQXMonitoringLocation.py  WQXOrganizationAddress.py  WQXOrganizationDescription.py  WQXResult.py  WQXSample.py  WQXSubmission.py  WQXTelephonic.py  __init__.py  __main__.py  exceptions.py
wqxlib/wqx_v3_0/: Activity.py  ActivityDescription.py  ActivityGroup.py  ActivityLocation.py  ActivityMetric.py  ActivityMetricType.py  AlternateMonitoringLocationIdentity.py  AquiferInformation.py  AttachedBinaryObject.py  BibliographicReference.py  BiologicalActivityDescription.py  BiologicalHabitatCollectionInformation.py  BiologicalHabitatIndex.py  BiologicalResultDescription.py  CollectionEffort.py  ComparableAnalyticalMethod.py  DataQualityIndicator.py  DetectionQuantitationLimit.py  ElectronicAddress.py  Entity_Update_Identifiers.py  FrequencyClassInformation.py  HorizontalAccuracyMeasure.py  IndexType.py  LabSamplePreparation.py  Measure.py  MeasureCompact.py  MonitoringLocation.py  MonitoringLocationGeospatial.py  MonitoringLocationIdentity.py  Project.py  (+22 more)
